--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<title>My Site</title>
+</head>
+<body>
+<div id="wrap">
+
+  
+  
+		<!-- WEBSITE GOES HERE -->
+
+</div>
+</body>
+</html>
+
+
 <h1>Hellow World!</h1>
+
+#wrap { 
+	width: 900px; 
+	margin: 0 auto; 
+}
